# open-broadcast

./: .gitignore  README.md  pyproject.toml
src/open_broadcast/: __init__.py  app.py
src/open_broadcast/pipeline/: audio.py  manager.py  video.py
src/open_broadcast/ui/: tray.py
